examples/consul-apigw/apigw-ReferenceGrants.yaml
---
## ReferenceGrants enable the Consul API Gateway to route traffic between different namespaces.
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: web
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: api
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul
  to:
    - group: ""
      kind: Service
---
