examples/consul-apigw/consul-apigw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP # options: HTTP or HTTPS
    port: 80 # options: 80 or 443 or custom
    name: http
    allowedRoutes:
      namespaces:
        from: All # options: All or Same or <Specific>
    # tls:
    #   certificateRefs:
    #     - name: cert
    #       namespace: secret-namespace
    #       group: ""
    #       kind: Secret
