examples/consul-apigw/apigw-route-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-api
  namespace: api
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: Exact
        value: /api
    backendRefs:
    - kind: Service
      name: api
      namespace: api
      port: 8080
