examples/consul-apigw/apigw-route-web.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-root
  namespace: web
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: web
      namespace: web
      port: 9091
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-web
  namespace: web
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - matches:
    - path:
        type: Exact
        value: /web
    backendRefs:
    - kind: Service
      name: web
      namespace: web
      port: 9091
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            replacePrefixMatch: /ui
            type: ReplacePrefixMatch
